# feasible-region

./: .gitignore  Cargo.toml  README.md  pixi.toml  pyproject.toml
.cargo/: config.toml
bench/: results.json  wasm.mjs
crates/feasible-core/: Cargo.toml
crates/feasible-core/examples/: bench.rs
crates/feasible-core/src/: lib.rs
crates/feasible-core/tests/: acceptance.rs  determinism.rs  fuzz_rules.rs  golden_parity.rs  mechanisms.rs
crates/feasible-core/tests/common/: mod.rs
crates/feasible-py/: Cargo.toml
crates/feasible-py/src/: lib.rs
crates/feasible-wasm/: Cargo.toml
crates/feasible-wasm/src/: lib.rs
docs/: index.html
docs/css/: site.css
docs/js/: engine.js  fmt-rational.js  iso3d.js  lp2d.js  main.js  poly3d.js  sync.js
docs/js/figures/: cycling.js  duality.js  dualview.js  formulation.js  hero.js  hood.js  kleeminty.js  maxflow.js  race.js  shortestpath.js
docs/traces/: centralpath-kleeminty3.json  centralpath-shortestpath.json  centralpath-topic21.json  degenerate1-naive.json  maxflow.json  statquest.json  topic21.json
docs/wasm/: feasible_core.js  feasible_core_bg.wasm
python/feasible_region/: __init__.py  _core.pyi  _types.py  bench.py  centralpath.py  fixtures.py  geometry.py  reference.py  traces.py
tests/: conftest.py  test_bench.py  test_cli.py  test_geometry.py  test_golden.py  test_native_parity.py  test_oracle.py  test_property.py  test_reference.py  test_regression.py  test_traces.py  test_types.py
traces/: centralpath-kleeminty3.json  centralpath-shortestpath.json  centralpath-statquest.json  centralpath-topic21.json  degenerate1.json  infeasible1.json  kleeminty3.json  shortestpath.json  unbounded1.json
