# feasible-wasm: browser build.
#
# Links `feasible-core` and exposes the single `#[wasm_bindgen]` entry point
# `solve_json(lp_json, options_json) -> String` (plus `version()`), built to
# `docs/wasm/feasible_core.{js,_bg.wasm}` by `pixi run build-wasm`. serde_json
# lives here (not in the library) so the core stays serde-only; default features
# only — float_roundtrip / arbitrary_precision are deliberately NOT enabled (they
# only grow the binary). Verify with `pixi run build-wasm-check` (scratch out-dir).

[package]
name = "feasible-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "WASM binding for feasible-core: solve_json + version."
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { workspace = true }
feasible-core = { path = "../feasible-core" }
serde_json = { workspace = true }

# Hermetic build: skip the binaryen `wasm-opt` post-pass (it is a
# separate toolchain download). The release profile (root Cargo.toml:
# opt-level="z", lto, codegen-units=1, panic="abort", strip) already produces a
# small binary; ENGINE measures and only flips this to true if the .wasm exceeds
# the 400 KB escalation trigger (contract Decision 1).
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
